--- a/2_example/1/□と○/index.html
+++ b/2_example/1/□と○/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="figure" class="transition square"></div>
+    <div id="figure" class="square"></div>
+
+    <button id="circle-button">丸くなるのです</button>
+    <button id="square-button">尖るのです</button>
 
     <script src="./main.js"></script>
   </body>
