--- a/1_workspace/2/クイズ１/index.html
+++ b/1_workspace/2/クイズ１/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div>
-      <h2>この星の名前は何でしょう？</h2>
-      <img id="quiz-image" 　src="./images/Ganymede.jpg" />
+      <h2 id="quiz-text"></h2>
+      <img id="quiz-image" />
       <div>
-        <button id="choice-1">ゴリアテ</button>
-        <button id="choice-2">ゼニガメ</button>
-        <button id="choice-3">ガニメデ</button>
+        <button id="choice-1"></button>
+        <button id="choice-2"></button>
+        <button id="choice-3"></button>
       </div>
       <div id="feedback"></div>
     </div>
