--- a/1_workspace/1/カウンター/index.html
+++ b/1_workspace/1/カウンター/index.html
@@ -10,9 +10,20 @@
     <div>
       <h2 id="display">0</h2>
     </div>
-    <button id="plus-button">+1</button>
-    <button id="minus-button">-1</button>
-    <button id="double-button">*2</button>
+    <button id="one-button">1</button>
+    <button id="two-button">2</button>
+    <button id="three-button">3</button>
+    <button id="four-button">4</button>
+    <button id="five-button">5</button>
+    <button id="six-button">6</button>
+    <button id="seven-button">7</button>
+    <button id="eight-button">8</button>
+    <button id="nine-button">9</button>
+    <button id="zero-button">0</button>
+    <button id="plus-button">+</button>
+    <button id="minus-button">-</button>
+    <button id="multiplied-button">*</button>
+    <button id="divided-button">/</button>
 
     <script src="main.js"></script>
   </body>
