--- a/1_workspace/1/カウンター/index.html
+++ b/1_workspace/1/カウンター/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <h2 id="display">0</h2>
+      <h2 display>0</div>
     </div>
     <button id="one-button">1</button>
     <button id="two-button">2</button>
